--- a/favorit.html
+++ b/favorit.html
@@ -30,33 +30,53 @@
     <div class="row justify-content-center mt-3">
         <div class="col-md-3">
             <div class="card kartu" >
-                <img src="gambarroti/maria-orlova-kU7TkW9FIJY-unsplash.jpg" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
+                <img src="gambarroti/koasonk.png" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
                 <div class="card-body">
-                    <p class="card-text">Roti Asoy</p>
+                    <p class="card-text" >croissant : IDR 6K</p>
+                    <div class="card-text">
+                        <button>ADD To Bag <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                            <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                          </svg></button>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="card kartu" >
-                <img src="gambarroti/maria-orlova-kU7TkW9FIJY-unsplash.jpg" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
+                <img src="gambarroti/pritzel.png" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
                 <div class="card-body">
-                    <p class="card-text">Roti Manis</p>
+                    <p class="card-text">Roti pretzel : IDR 10K</p>
+                    <div class="card-text">
+                        <button>ADD To Bag <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                            <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                          </svg></button>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="card kartu" >
-                <img src="gambarroti/maria-orlova-kU7TkW9FIJY-unsplash.jpg" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
+                <img src="gambarroti/kapkek.png" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
                 <div class="card-body">
-                    <p class="card-text">Roti Tawar</p>
+                    <p class="card-text">Cupcake : IDR 8K</p>
+                    <div class="card-text">
+                        <button>ADD To Bag <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                            <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                          </svg></button>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="card kartu" >
-                <img src="gambarroti/maria-orlova-kU7TkW9FIJY-unsplash.jpg" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
+                <img src="gambarroti/pwanjank.png" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
                 <div class="card-body">
-                    <p class="card-text">Roti Cokelat</p>
+                    <p class="card-text">Roti Bagel : IDR 15K</p>
+                    <div class="card-text">
+                        <button>ADD To Bag <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                            <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                          </svg></button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -64,33 +84,53 @@
     <div class="row justify-content-center mt-3">
         <div class="col-md-3">
             <div class="card kartu" >
-                <img src="gambarroti/maria-orlova-kU7TkW9FIJY-unsplash.jpg" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
+                <img src="gambarroti/kukis.png" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
                 <div class="card-body">
-                    <p class="card-text">Roti Asoy</p>
+                    <p class="card-text">Cookies : IDR 8K</p>
+                    <div class="card-text">
+                        <button>ADD To Bag <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                            <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                          </svg></button>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="card kartu" >
-                <img src="gambarroti/maria-orlova-kU7TkW9FIJY-unsplash.jpg" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
+                <img src="gambarroti/jamonk.png" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
                 <div class="card-body">
-                    <p class="card-text">Roti Manis</p>
+                    <p class="card-text">Roti Gandum : IDR 14k</p>
+                    <div class="card-text">
+                        <button>ADD To Bag <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                            <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                          </svg></button>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="card kartu" >
-                <img src="gambarroti/maria-orlova-kU7TkW9FIJY-unsplash.jpg" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
+                <img src="gambarroti/rotay.png" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
                 <div class="card-body">
-                    <p class="card-text">Roti Tawar</p>
+                    <p class="card-text">Roti Callah : IDR 12K</p>
+                    <div class="card-text">
+                        <button>ADD To Bag <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                            <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                          </svg></button>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="col-md-3">
             <div class="card kartu" >
-                <img src="gambarroti/maria-orlova-kU7TkW9FIJY-unsplash.jpg" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
+                <img src="gambarroti/sordok.png" class="card-img-top" style="object-fit: cover; height: 200px;" alt="Roti Asoy">
                 <div class="card-body">
-                    <p class="card-text">Roti Cokelat</p>
+                    <p class="card-text">Roti Sourdough : IDR 15K</p>
+                    <div class="card-text">
+                        <button>ADD To Bag <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bag" viewBox="0 0 16 16">
+                            <path d="M8 1a2.5 2.5 0 0 1 2.5 2.5V4h-5v-.5A2.5 2.5 0 0 1 8 1m3.5 3v-.5a3.5 3.5 0 1 0-7 0V4H1v10a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V4zM2 5h12v9a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1z"/>
+                          </svg></button>
+                    </div>
                 </div>
             </div>
         </div>
