--- a/shoping.html
+++ b/shoping.html
@@ -27,6 +27,57 @@
     </div>
     </nav>
 <!-- nv -->
+<table class="table mt-3">
+    <thead>
+      <tr>
+        <th scope="col">id</th>
+        <th scope="col">Item Name</th>
+        <th scope="col">Jumlah Item</th>
+        <th scope="col">Harga</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">12244</th>
+        <td>croissant</td>
+        <td>1</td>
+        <td>IDR 6.000</td>
+      </tr>
+      <tr>
+        <th scope="row">12244</th>
+        <td>croissant</td>
+        <td>1</td>
+        <td>IDR 6.000</td>
+      </tr>
+      <tr>
+        <th scope="row">12244</th>
+        <td>croissant</td>
+        <td>1</td>
+        <td>IDR 6.000</td>
+    </tr>
+    <tr>
+        <th scope="row">12244</th>
+        <td>croissant</td>
+        <td>1</td>
+        <td>IDR 6.000</td>
+      </tr>
+
+      <tr>
+        <th scope="row"></th>
+        <td>TOTAL </td>
+        <td>4</td>
+        <td>IDR 24.000</td>
+      </tr>
+    </tbody>
+  </table>
+  <div class="d-grid gap-2 kata">
+    <a href="QR.html"><button class="btn btn-primary " type="button">>BAYAR <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cash-stack" viewBox="0 0 16 16">
+        <path d="M1 3a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1zm7 8a2 2 0 1 0 0-4 2 2 0 0 0 0 4"/>
+        <path d="M0 5a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H1a1 1 0 0 1-1-1zm3 0a2 2 0 0 1-2 2v4a2 2 0 0 1 2 2h10a2 2 0 0 1 2-2V7a2 2 0 0 1-2-2z"/>
+      </svg></button></a>
+  </div>
+  
+ 
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
